2006-06-13  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/27830
	* tree-inline.c (copy_body_r): For copying the operand
	of an ADDR_EXPR make sure to fold &* afterwards.

	* g++.dg/tree-ssa/pr27830.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@114600 138bc75d-0d04-0410-961f-82ee72b054a4